[package]
name = "pdblister"
description = "Faster version of `symchk /om` for generating PDB manifests of offline machines"
license-file = "LICENSE"
homepage = "https://github.com/microsoft/pdblister"
repository = "https://github.com/microsoft/pdblister"
version = "0.0.3"
authors = ["Gogs <gogs@fake.local>", "Justin Moore <jusmoore@microsoft.com>"]
edition = "2021"

[lib]
name = "pdblister"
path = "src/lib.rs"

[[bin]]
name = "pdblister"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3"
indicatif = { version = "0.17.2", features = ["tokio"] }
mime = "0.3"
pdb = "0.8.0"
rand = "0.8"
reqwest = "0.11.13"
serde_json = "1.0.87"
thiserror = "1.0.37"
url = "2.2"
zerocopy = { version = "0.7.32", features = ["derive"]}
zerocopy-derive = "0.7.32"

[dependencies.tokio]
version = "1.24.2"
features = ["full"]

