[package]
name = "read_write_driver"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Vella <cvella@signal-labs.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdk = "0.2.0"
wdk-alloc = "0.2.0"
wdk-panic = "0.2.0"
wdk-sys = "0.2.0"
once_cell = "1.19.0"

[dependencies.iced-x86]
version = "1.21.0"
default-features = false
features = ["decoder", "no_std"]

[build-dependencies]
wdk-build = "0.2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
debug = true

[profile.dev]
panic = "abort"

[package.metadata.wdk]


